improve legibility, add type hints and update pydoc

--- a/MPCdesig.html
+++ b/MPCdesig.html
@@ -283,7 +283,7 @@ it&nbsp;is&nbsp;a&nbsp;valid&nbsp;packed&nbsp;one,&nbsp;or&nbsp;the&nbsp;very&nb
 designation<br>
 &nbsp;<br>
 *Return:&nbsp;unpacked&nbsp;provisional&nbsp;designation&nbsp;(str)&nbsp;or&nbsp;an&nbsp;error&nbsp;message</tt></dd></dl>
- <dl><dt><a name="-unpack_survey_desig"><strong>unpack_survey_desig</strong></a>(input_desig)</dt><dd><tt>Unpack&nbsp;a&nbsp;special&nbsp;survey&nbsp;asteroid&nbsp;designation.<br>
+ <dl><dt><a name="-unpack_survey_designation"><strong>unpack_survey_designation</strong></a>(designation: str) -&gt; str</dt><dd><tt>Unpack&nbsp;a&nbsp;special&nbsp;survey&nbsp;asteroid&nbsp;designation.<br>
 &nbsp;<br>
 *Input:&nbsp;an&nbsp;asteroid&nbsp;designation<br>
 &nbsp;<br>
